--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,7 @@
                         </goals>
                         <configuration>
                             <createDependencyReducedPom>false</createDependencyReducedPom>
-                            <outputFile>C:\Users\tahac\Desktop\plugins\MafanaPlaytimeManager.jar</outputFile>
+                            <outputFile>C:\Users\tahac\Desktop\plugins\plugins\MafanaPlaytimeManager.jar</outputFile>
                         </configuration>
                     </execution>
                 </executions>
@@ -80,9 +80,9 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>com.github.MaskedWasTaken</groupId>
-            <artifactId>MafanaMysqlAPI-Remake</artifactId>
-            <version>1.9</version>
+            <groupId>com.github.MafanaNetwork</groupId>
+            <artifactId>MafanaDatabaseAPI</artifactId>
+            <version>1.0</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
@@ -96,15 +96,15 @@
             <version>3.1.5</version>
         </dependency>
         <dependency>
-            <groupId>com.github.MaskedWasTaken</groupId>
+            <groupId>com.github.MafanaNetwork</groupId>
             <artifactId>MafanaNetworkCommunicator</artifactId>
-            <version>1.6</version>
+            <version>2.1</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>com.github.MaskedWasTaken</groupId>
+            <groupId>com.github.MafanaNetwork</groupId>
             <artifactId>MafanaCommandNetwork</artifactId>
-            <version>1.0</version>
+            <version>1.3</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
